@@ -10,7 +10,7 @@ try:
     fd = int(sys.argv[2])
 
     try:
-        os.write(fd, "blat")
+        os.write(fd, b"blat")
     except os.error:
         # Success -- could not write to fd.
         sys.exit(0)
