@@ -140,6 +140,8 @@ Library
 Extension Modules
 -----------------
 
+- Issue #3782: os.write() must not accept unicode strings.
+
 - Issue #2975: When compiling several extension modules with Visual Studio 2008
   from the same python interpreter, some environment variables would grow
   without limit.
